- Merging with netmail-open/wjelement - Add Visual Studio project files

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -10,8 +10,8 @@ WJElement - <a href="http://json.org/">JSON</a> manipulation in C
 </p>
 <p>
 WJElement is a very flexible JSON library developed by Messaging Architects.
-It was created for MA's "WARP" webserver, and is built on top of the (also-
-included) lower-level WJReader and WJWriter libraries.
+It was created for MA's "WARP" webserver, and is built on top of the
+(also-included) lower-level WJReader and WJWriter libraries.
 </p>
 <p>
 <ul>
@@ -27,8 +27,8 @@ JavaScript itself.
    WJElement provides complete
    <a href="http://json-schema.org/">JSON-schema</a> validation
    (draft
-   <a href="https://tools.ietf.org/html/draft-zyp-json-schema-03">v3</a>;
-   v4 will also be supported in the future).
+   <a href="https://tools.ietf.org/html/draft-zyp-json-schema-03">v3</a>
+   is fully supported; v4 support is working but incomplete).
  </li>
  </ul>
 </li>
