--- a/documentation/wjwriter.html
+++ b/documentation/wjwriter.html
@@ -81,7 +81,7 @@ WJWriter _WJWOpenDocument(XplBool pretty, WJWriteCallback callback,
 </p>
 <p>
 <blockquote><pre>
-WJWriter WJOpenFILEDocument(XplBool pretty, FILE *file);
+WJWriter WJWOpenFILEDocument(XplBool pretty, FILE *file);
 </pre></blockquote>
 </p>
 <p>
