--- a/documentation/wjelement.html
+++ b/documentation/wjelement.html
@@ -149,6 +149,24 @@ typedef enum {
 <h1>WJElement Interfaces</h1>
 <h2>Document/Element Management</h2>
 <p>
+<strong>WJEParse</strong>
+ - Parse the provided JSON document and return the new WJElement
+</p>
+<p>
+<blockquote><pre>
+WJElement WJEParse(const char *json);
+WJElement _WJEParse(const char *json, char quote);
+</pre></blockquote>
+</p>
+<p>
+	The _WJEParse version can be used to parse a document with a non-standard
+	quote character. This allows easy parsing of simple documents directly in a
+	C source file without having to escape double quote characters. Example:
+    <blockquote><pre>
+doc = _WJEParse("{ 'foo': true, 'bar': 'yup' }", '\'');
+    </pre></blockquote>
+</p>
+<p>
 <strong>WJEOpenDocument</strong>
  - Load a WJElement object from the provided
 <a href="wjreader.html">WJReader</a>
@@ -170,6 +188,31 @@ WJElement WJEOpenDocument(WJReader reader, char *where, WJELoadCB loadcb, void *
 XplBool WJEWriteDocument(WJElement document, WJWriter writer, char *name);
 </pre></blockquote>
 </p>
+<p>
+<strong>WJEWriteFILE</strong>
+ - Write a WJElement object to the provided FILE*
+<blockquote><pre>
+void WJEWriteFILE(WJElement document, FILE* fd);
+</pre></blockquote>
+</p>
+<p>
+  WJEWriteFILE() requires an already opened FILE* to write to.
+  It is also used internally by <a href="#WJEDump">WJEDump()</a>
+</p>
+
+<p>
+<strong>WJEWriteMEM</strong>
+ - Allocate and write to a string
+<blockquote><pre>
+char * WJEWriteMEM(WJElement document, XplBool pretty, size_t maxlength);
+</pre></blockquote>
+</p>
+<p>
+  WJEWriteMEM() allocates and returns a string containing the document.
+  A maxlength of 0 means the string may be of unlimited length.
+  The returned string must be freed with MemFree by the consumer.
+</p>
+
 <p>
 <strong>WJECloseDocument</strong>
  - Destroy a WJElement object
@@ -269,13 +312,16 @@ XplBool _WJEBool(WJElement container, char *path, WJEAction action, WJElement *l
 </pre></blockquote>
 </p>
 <p>
-<strong>WJEString</strong>
+<strong>WJEString, WJEStringN</strong>
  - Access a string element
 </p>
 <p>
 <blockquote><pre>
 char * WJEString(WJElement container, char *path, WJEAction action, char *value);
 char * _WJEString(WJElement container, char *path, WJEAction action, WJElement *last, char *value);
+
+char * WJEStringN(WJElement container, char *path, WJEAction action, char *value, size_t len);
+char * _WJEStringN(WJElement container, char *path, WJEAction action, WJElement *last, char *value, size_t len);
 </pre></blockquote>
 </p>
 <p>
@@ -359,6 +405,34 @@ double _WJEDouble(WJElement container, char *path, WJEAction action, WJElement *
 </pre></blockquote>
 </p>
 <p>
+<strong>WJE...F variants</strong>
+ - Format-capable versions of element functions
+</p>
+<p>
+The following functions...
+<ul>
+<li><strong>WJEGetF</strong></li>
+<li><strong>WJEBoolF</strong></li>
+<li><strong>WJEStringF</strong></li>
+<li><strong>WJEStringNF</strong></li>
+<li><strong>WJEObjectF</strong></li>
+<li><strong>WJEArrayF</strong></li>
+<li><strong>WJENullF</strong></li>
+<li><strong>WJEInt32F</strong></li>
+<li><strong>WJEUInt32F</strong></li>
+<li><strong>WJEInt64F</strong></li>
+<li><strong>WJEUInt64F</strong></li>
+<li><strong>WJEDoubleF</strong></li>
+</ul>
+...are identical to the non F variants except that the
+path argument has been moved to the end and is used as a format string. For
+example if you need a value by index, and that index is stored in the
+variable x:
+<blockquote><pre>
+val = WJENumberF(doc, WJE_GET, NULL, 0, "foo[%d]", x);
+</pre></blockquote>
+</p>
+<p>
 <strong>WJEChild</strong>
  - Find, create or update an element by name instead of path.  This allows
 access to elements that would be difficult to reference by path.  No selector
@@ -416,6 +490,10 @@ XplBool WJESchemaValidate(WJElement schema, WJElement document,
 Additional schema will be loaded
 via the load callback if needed.  Any validation errors will be reported,
 printf-style, to errcb.</p>
+<p>
+If a the load callback is used to acquire schema but a NULL free callback is
+provided, WJECloseDocument will be used internally to release it.
+</p>
 <p>
 <strong>WJESchemaIsType</strong>
  - Determine if a document implements a specific schema.
@@ -512,7 +590,7 @@ void WJESchemaFreeBacklink(char *backlink);
 </pre></blockquote>
 </p>
 <h2>Debug</h2>
-<p>
+<p><a name="WJEDump" />
 <strong>WJEDump</strong>
  - write a document to stdout
 </p>
